AgapeFR skin: Fixed "Toutes les activités" button position

--- a/Portals/_default/Skins/AgapeFR/HeaderPhotoAndTitle-FullWidth-2columns.css
+++ b/Portals/_default/Skins/AgapeFR/HeaderPhotoAndTitle-FullWidth-2columns.css
@@ -15,13 +15,12 @@
 }
 
 .LeftColumn, .CenterPane {
-    display: inline-table;
+    display: table-cell;
     vertical-align: top;
 }
 
 .LeftColumn {
     width: 307px;
-    height: 100%;
     position: relative;
 }
 
